--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,44 @@
 body {
     font-family: "Pretendard Variable", sans-serif;
     }
+.page-title {
+    font-size: 50px;
+    font-weight: 800;
+    line-height: 1.3;
+    color: #13b491;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.page-subtitle {
+    width: 240px;
+    height: 50px;
+    border: 5px solid #ffa32d;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 700;
+    color:#ffa32d;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+.btn {
+    background-color: #ffa32d;
+    max-width: 500px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    font-weight: 700;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 20px;
+    margin-bottom: 35px;
+    color: #FFFFFF;
+    box-shadow: 0 14px 0 #e66000;
+    margin-left: auto;
+    margin-right: auto;
+}
